--- a/boring_to_beautiful/step_01/pubspec.yaml
+++ b/boring_to_beautiful/step_01/pubspec.yaml
@@ -33,3 +33,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/albums/
+    - assets/images/artists/
+    - assets/images/news/
+    - assets/images/playlists/
